feat: removing OrderGateway DB and creating OrderGateway integration with OrderAPI
