# docs/swagger.json
@@ -13,7 +13,7 @@
     "tags": [
         {
             "name": "Pedidos",
-            "description": "API responsável por gerenciar pedidos"
+            "description": "API responsável por consulta e atualizar status dos pedidos"
         },
         {
             "name": "Produtos",
@@ -22,10 +22,6 @@
         {
             "name": "Cliente",
             "description": "API responsável por gerenciar os Clientes"
-        },
-        {
-            "name": "Pagamento",
-            "description": "API responsável por gerenciar o status do pagamento do cliente"
         }
     ],
     "schemes": [
@@ -37,113 +33,6 @@
     ],
     "paths": {
         "/order": {
-            "post": {
-                "tags": [
-                    "Pedidos"
-                ],
-                "summary": "Place Order",
-                "operationId": "placeOrder",
-                "parameters": [
-                    {
-                        "name": "placeOrder",
-                        "in": "body",
-                        "description": "Order object that needs to be added",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "tableNumber": {
-                                    "type": "integer",
-                                    "example": 11
-                                },
-                                "orderItems": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "object",
-                                        "properties": {
-                                            "idItem": {
-                                                "type": "string",
-                                                "format": "uuid",
-                                                "example": "bf32fb00-7bb2-481d-86ca-336dc5af1d4e"
-                                            },
-                                            "price": {
-                                                "type": "number",
-                                                "format": "float",
-                                                "example": 30.99
-                                            },
-                                            "quantity": {
-                                                "type": "integer",
-                                                "example": 2
-                                            }
-                                        },
-                                        "required": [
-                                            "idItem",
-                                            "price",
-                                            "quantity"
-                                        ]
-                                    }
-                                },
-                                "cpf": {
-                                    "type": "string",
-                                    "nullable": true,
-                                    "example": null
-                                }
-                            },
-                            "required": [
-                                "tableNumber",
-                                "orderItems"
-                            ]
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Order placed successfully",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "orderId": {
-                                    "type": "string",
-                                    "format": "uuid",
-                                    "example": "d2f613ce-bee5-48c5-b8c9-e229fa3ea981"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "friendlyMessage": {
-                                    "type": "string",
-                                    "example": "Fail while trying to access POST - /order"
-                                },
-                                "errorMessage": {
-                                    "type": "string",
-                                    "example": "Quantity must be greater than 1"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "friendlyMessage": {
-                                    "type": "string",
-                                    "example": "Fail while trying to access POST - /order"
-                                },
-                                "errorMessage": {
-                                    "type": "string",
-                                    "example": "Unkown error!"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
             "get": {
                 "tags": [
                     "Pedidos"
@@ -391,159 +280,6 @@
                                 "friendlyMessage": {
                                     "type": "string",
                                     "example": "Fail while trying to access PUT - /order/{orderId}"
-                                },
-                                "errorMessage": {
-                                    "type": "string",
-                                    "example": "Unkown error!"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/order/{orderId}/payment": {
-            "get": {
-                "tags": [
-                    "Pedidos"
-                ],
-                "summary": "Check Order Payment Status",
-                "operationId": "checkOrderPaymentStatus",
-                "parameters": [
-                    {
-                        "name": "orderId",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid",
-                            "example": "e5c79516-aec7-468d-a802-a8cee929ad9f"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Payment found",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "id": {
-                                    "type": "string",
-                                    "format": "uuid",
-                                    "example": "64289576-f81e-4339-a0c9-84416e5c5518"
-                                },
-                                "orderId": {
-                                    "type": "string",
-                                    "format": "uuid",
-                                    "example": "64289576-f81e-4339-a0c9-84416e5c5518"
-                                },
-                                "value": {
-                                    "type": "number",
-                                    "example": "84.95"
-                                },
-                                "status": {
-                                    "type": "string",
-                                    "example": "PAYMENT_REFUSED"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "friendlyMessage": {
-                                    "type": "string",
-                                    "example": "Fail while trying to access GET - /payment/{paymentId}"
-                                },
-                                "errorMessage": {
-                                    "type": "string",
-                                    "example": "Payment does not exist"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "friendlyMessage": {
-                                    "type": "string",
-                                    "example": "Fail while trying to access GET - /payment/{paymentId}"
-                                },
-                                "errorMessage": {
-                                    "type": "string",
-                                    "example": "Unkown error!"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/payment/hook": {
-            "post": {
-                "tags": [
-                    "Pagamento"
-                ],
-                "summary": "Atualizar status do pagamento",
-                "operationId": "paymentWebHook",
-                "parameters": [
-                    {
-                        "name": "paymentWebHook",
-                        "in": "body",
-                        "description": "Payment object that needs to be updated",
-                        "required": true,
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "issueId": {
-                                    "type": "string",
-                                    "format": "uuid",
-                                    "example": "bf32fb00-7bb2-481d-86ca-336dc5af1d4e"
-                                },
-                                "status": {
-                                    "type": "string",
-                                    "example": "approved"
-                                }
-                            },
-                            "required": [
-                                "issueId",
-                                "status"
-                            ]
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Payment status updated successfully"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "friendlyMessage": {
-                                    "type": "string",
-                                    "example": "Fail while trying to access POST - /payment/webhook"
-                                },
-                                "errorMessage": {
-                                    "type": "string",
-                                    "example": "Payment is already approved"
-                                }
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "properties": {
-                                "friendlyMessage": {
-                                    "type": "string",
-                                    "example": "Fail while trying to access POST - /payment/webhook"
                                 },
                                 "errorMessage": {
                                     "type": "string",
