# src/apis/OrderApi.ts
@@ -1,7 +1,5 @@
 import { type IHttp } from '../interfaces/IHttp'
-import type EventHandler from '../handlers/EventHandler'
 import { type ChangeOrderStatusCommand } from '../usecases/ChangeOrderStatusUseCase'
-import { type PlaceOrderCommand } from '../usecases/PlaceOrderUseCase'
 import type IGatewayFactory from '../interfaces/IGatewayFactory'
 import OrderController from '../controllers/OrderController'
 import { type OrderPageParams } from '../interfaces/IOrderGateway'
@@ -11,24 +9,17 @@ export default class OrderApi implements IApi {
   private readonly orderController: OrderController
   constructor (
     private readonly http: IHttp,
-    factory: IGatewayFactory,
-    eventHandler: EventHandler
+    factory: IGatewayFactory
   ) {
-    this.orderController = new OrderController(factory, eventHandler)
+    this.orderController = new OrderController(factory)
   }
 
   init (): void {
-    void this.http.route('post', 'order', async (_: any, body: PlaceOrderCommand) => {
-      return await this.orderController.placeOrder(body)
-    })
     void this.http.route('get', 'order', async (req: { query: OrderPageParams }) => {
       return await this.orderController.findOrder(req.query)
     })
     void this.http.route('put', 'order/:id', async (req: { params: { id: string } }, body: ChangeOrderStatusCommand) => {
       return await this.orderController.changeOrderStatus(req.params.id, body)
-    })
-    void this.http.route('get', 'order/:id/payment', async (req: { params: { id: string } }) => {
-      return await this.orderController.findPaymentByOrderId(req.params.id)
     })
   }
 }
